--- a/dev/frontend/assets/css/pages/_login.scss
+++ b/dev/frontend/assets/css/pages/_login.scss
@@ -5,7 +5,7 @@
 
   .img-container{
     padding: 50px 70px 150px 70px;
-    background-image: url("assets/img/login_bg.svg");
+    background-image: url("../img/login_bg.svg");
     background-size: cover;
     background-position: center center;
 
