--- a/dev/frontend/assets/css/base/_placeholders.scss
+++ b/dev/frontend/assets/css/base/_placeholders.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400');
+// @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400');
 
 
 $blue: #5D3CAE;
