--- a/dev/merger/static/assets/css/base/_placeholders.scss
+++ b/dev/merger/static/assets/css/base/_placeholders.scss
@@ -157,6 +157,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   padding-bottom: 10px;
   background: white;
   border-left: 0.5px solid #E1E0E0;
+  display: none;
 
   hr{
     margin: 0;
